--- a/src/app/features/dashboard/dashboard.html
+++ b/src/app/features/dashboard/dashboard.html
@@ -40,7 +40,7 @@
         <i class="fas fa-users"></i>
       </div>
       <div class="card-info">
-        <p>Utilisateurs</p>
+        <p>Employes</p>
         <h2>{{ users }}</h2>
       </div>
     </div>
